# sustainable-catalyst-platform-core

./: .gitignore  BUILD_MANIFEST.json  CHANGELOG.md  PLATFORM_CORE_V200_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V210_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V220_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V230_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V240_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V250_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V270_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V271_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V272_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V273_TERMINAL_COMMANDS.txt  PLATFORM_CORE_V280_TERMINAL_COMMANDS.txt  PUSH_PLATFORM_CORE_V220_CLEAN.sh  PUSH_PLATFORM_CORE_V230_FINAL.sh  PUSH_PLATFORM_CORE_V240_FINAL.sh  PUSH_PLATFORM_CORE_V250_FINAL.sh  PUSH_PLATFORM_CORE_V270_FINAL.sh  PUSH_PLATFORM_CORE_V271_FINAL.sh  PUSH_PLATFORM_CORE_V272_FINAL.sh  PUSH_PLATFORM_CORE_V273_FINAL.sh  PUSH_PLATFORM_CORE_V280_FINAL.sh  README.md  RELEASE_NOTES_V260.md  RELEASE_NOTES_V270.md  RELEASE_NOTES_V271.md  RELEASE_NOTES_V272.md  RELEASE_NOTES_V273.md  RELEASE_NOTES_V280.md  SMOKE_TEST_RESULTS.json  TEST_RESULTS.txt  push_platform_core_v2_0_0_to_github.sh  push_platform_core_v2_1_0_to_github.sh  render.yaml
backend/: .env.example  Dockerfile  requirements.txt  start.sh
backend/public_sdk/python/: README.md  pyproject.toml
backend/public_sdk/python/sc_platform_core_public/: __init__.py  client.py
deployment/: docker-compose.gateway.example.yml  platform-core-v260.env.example  platform-core-v270.env.example  platform-core-v271.env.example  platform-core-v272.env.example  (+2 more)
docs/: ROADMAP.md  (+13 more)
(+151 files in other folders)
